# onnes

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
onnesim/: __init__.py  ablation.py  agent.py  agent_eval.py  agent_passk.py  agent_stress.py  baseline_zoo.py  benchmark.py  bluefors_data.py  constants.py  continuous_monitor.py  cost_model.py  cryo_engine.py  cryowala_physics.py  cryowala_scenarios.py  deep_tsad.py  degeneracy.py  dilution_cooling.py  evaluate.py  faults.py  leeds_data.py  ml_baseline.py  ml_surrogate.py  mockclient.py  model.py  monitor_gating.py  monitor_sweep.py  multi_agent.py  ornl_sns_data.py  real_data.py  real_detect.py  realistic_faults.py  retrieval.py  stats.py  telemetry.py  timesfm_opponent.py  twin_fidelity.py  virtual_clone.py
outputs/: ablation_results.json  agent_eval_fewshot_n200_results.json  agent_eval_fewshot_turns.jsonl  agent_eval_results.json  agent_eval_turns.jsonl  baseline_zoo.json  benchmark_results.json  continuous_monitor.json  continuous_monitor_turns.jsonl  cost_model.json  engineered_baseline_h2h.json  gemini_enhanced_turns.jsonl  gemini_vs_claude.json  gemini_zero_shot_turns.jsonl  head_to_head_stats.json  monitor_gating.json  monitor_sweep_gemini.json  real_detect.json  technique_lift.json
scripts/: analyze_turn_logs.py  eval_gemini.py  eval_kaggle_faults.py  eval_real.py  eval_retrieval.py  evaluate.py  finalize_paper.py  generate_dataset.py  make_dashboard.py  make_figures.py  make_review_figures.py  make_window_figure.py  run_benchmark.py  run_cooldown.py  run_deep_sweep.py  run_deep_tsad.py  run_demo_sensitivity.py  run_dev_split.py  run_full_benchmark.py  run_hardened_benchmark.py  run_label_efficiency.py  run_monitor_sweep.py  tavily_search.py  (+8 more)
(+12 files in other folders)
